--- a/CSS/style.css
+++ b/CSS/style.css
@@ -419,7 +419,7 @@ input #darkLightMode {
 #evolution #gridPokemon {
 	display: grid;
 	grid-template-columns: 1fr;
-	grid-template-rows: auto 1fr 1fr;
+	grid-template-rows: auto(auto 1fr 1fr);
 	gap: var(--gap-medium);
 	background-color: var(--color-black-1);
 	padding: var(--padding-medium);
@@ -476,7 +476,7 @@ input #darkLightMode {
 	gap: var(--gap-medium);
 }
 
-#gridPokemon article > div {
+article > div {
 	display: grid;
 	grid-template-columns: auto min-content;
 	grid-template-rows: auto auto auto 1fr;
@@ -484,18 +484,18 @@ input #darkLightMode {
 	gap: var(--gap-small);
 }
 
-#gridPokemon article > div span:not(.subText) {
+article > div span:not(.subText) {
 	grid-column: 1/2;
 	grid-row: 2/3;
 }
 
-#gridPokemon article > div .flexTypes {
+article > div .flexTypes {
 	grid-column: 1/2;
 	grid-row: 3/4;
 	flex-wrap: wrap;
 }
 
-#gridPokemon article > div .btnArticle {
+article > div .btnArticle {
 	align-self: end;
 	grid-column: 2/3;
 	grid-row: 4/5;
@@ -656,7 +656,7 @@ fieldset {
 		flex-direction: column;
 	}
 
-	#pokemonPromoted #gridPokemon img {
+	#gridPokemon img {
 		max-width: 60%;
 	}
 
@@ -670,28 +670,28 @@ fieldset {
 		padding-bottom: var(--padding-small);
 	}
 
-	#pokemonPromoted #gridPokemon article {
+	#gridPokemon article {
 		grid-template-columns: 1fr;
 		gap: var(--gap-medium);
 		grid-template-rows: 1fr min-content;
 	}
 
-	#pokemonPromoted #gridPokemon article .btnArticle {
+	#gridPokemon article .btnArticle {
 		grid-column: 1/3;
 	}
 
-	#pokemonPromoted #gridPokemon article figure {
+	#gridPokemon article figure {
 		display: flex;
 		align-items: center;
 		justify-content: center;
 	}
 
-	#pokemonPromoted #gridPokemon article > div {
+	article > div {
 		grid-template-columns: 1fr 1fr;
 		padding: 0;
 	}
 
-	#pokemonPromoted #gridPokemon article .flexTypes {
+	#gridPokemon article .flexTypes {
 		grid-column: 2/3;
 		grid-row: 1/3;
 		display: grid;
@@ -758,6 +758,7 @@ fieldset {
 
 /* Media 520px smartphone */
 @media (max-width: 520px) {
+	/* Change le header */
 	#headerPage {
 		display: grid;
 		grid-template-columns: 1fr;
